@@ -21,6 +21,7 @@ Version 1.0.7 to be released
 - New: Added support for displaying call stack information in trace messages (Qiang)
 - New: Added 'index' option to AR relations so that related objects can be indexed by specific column value (Qiang)
 - New: Allow CHtml::activeLabel to override the automatically generated 'for' attribute (Qiang)
+- New: Added 'csrf' to CHtml client options so that js-based form submission can submit CSRF token (Qiang)
 
 Version 1.0.6 June 7, 2009
 --------------------------
